--- a/index.html
+++ b/index.html
@@ -3,12 +3,33 @@
 
 <head>
     <meta charset=utf-8/>
+
+    <!-- link stylesheet -->
+    <link rel="stylesheeet" href="style.css">
+
+    <!-- title webpage -->
+    <title>ic-05</title>
+
 </head>
 
 
 <body>
+<!-- add heading -->
+<h1>Intro to JavaScript</h1>
+
+<div>
+
+    <button type="button">Click Me</button>
+
+    <div id="button-div" class="gen">
+        Number of times button clicked: 0
+    </div>
+
+</div>
 
 
 </body>
+
+<script src="main.js" class="gen">
 
 </html>
