--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <div>
 
-    <button type="button">Click Me</button>
+    <button type="button" onClick="buttonClicked()">Click Me</button>
 
     <div id="button-div" class="gen">
         Number of times button clicked: 0
